corpus/c/syntax/case-05/snapshots/gcc15/render.ci.txt
src/main.c:2:18: error: syntax error
help: fix the first parser error at the user-owned location
why: expected ')' before ';' token
| src/main.c:2:18
|     return (1 + 2;
|                  ^
suggested edit: insert ')' at src/main.c:2:18
  patch: src/main.c
  2 -     return (1 + 2;
  2 +     return (1 + 2);
src/main.c:2:19: error: syntax error
help: fix the first parser error at the user-owned location
why: expected ';' before '}}' token
| src/main.c:2:19
|     return (1 + 2;
note: omitted additional details; rerun with --formed-profile=verbose